@@ -1,3 +1,12 @@
+2017-06-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* src/example1.cpp: Altered to permit compilation on Windows
+	* src/example2.cpp: Idem
+
+	* DESCRIPTION (OS_type): Constraint removed
+
 2017-06-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Updated now that RcppMsgPack is on CRAN
